--- a/src/app/components/music-list/music-list.component.html
+++ b/src/app/components/music-list/music-list.component.html
@@ -1,9 +1,10 @@
 <ng-container>
     <div>
         <button (click)="onClickToggleView()">Changer vue</button>
+        <button (click)="add()">Ajouter une musique</button>
     </div>
     <ng-container *ngIf="toggleView">
-        <app-card *ngFor="let music of data" [music]="music"></app-card>
+        <app-card *ngFor="let music of data" [music]="music" (removeMusic)="remove($event)" (updateMusic)="update($event)"></app-card>
     </ng-container>
-    <app-tablo *ngIf="!toggleView" [musics]="data"></app-tablo>
+    <app-tablo *ngIf="!toggleView" [musics]="data" (removeMusic)="remove($event)" (updateMusic)="update($event)"></app-tablo>
 </ng-container>
