--- a/src/app/components/view/card/card.component.html
+++ b/src/app/components/view/card/card.component.html
@@ -13,10 +13,10 @@
     </mat-card-content>
 
     <mat-card-actions align="end">
-        <button mat-mini-fab aria-label="Editer" color="accent">
+        <button mat-mini-fab aria-label="Editer" color="accent" (click)="update()">
             <mat-icon>edit</mat-icon>
         </button>
-        <button mat-mini-fab aria-label="Supprimer" color="warn">
+        <button mat-mini-fab aria-label="Supprimer" color="warn" (click)="remove()">
             <mat-icon>delete</mat-icon>
         </button>
     </mat-card-actions>
