Affichage des images + recherche

--- a/src/app/components/music-editor/music-editor.component.html
+++ b/src/app/components/music-editor/music-editor.component.html
@@ -27,7 +27,7 @@
             <p>
                 <mat-form-field>
                     <mat-label>Artist</mat-label>
-                    <input formControlName="artist" name="artist" placeholder="artist"/>
+                    <input formControlName="artist" name="artist" placeholder="artist" required/>
                 </mat-form-field>
             </p>
             <p>
