--- a/src/app/components/music-list/music-list.component.html
+++ b/src/app/components/music-list/music-list.component.html
@@ -5,11 +5,11 @@
         <button (click)="onClickRandomView()">Afficher une musique aléatoire</button>
     </div>
     <div *ngIf="randomView">
-        <button (click)="onClickRandomView()">Aficher toutes les musiques</button>
+        <button (click)="onClickRandomView()">Afficher toutes les musiques</button>
     </div>
     <div>
         <mat-form-field class="form-field-toolbar">
-            <input [(ngModel)]="searchTerm" matInput placeholder="Titre d'une musique">
+            <input [(ngModel)]="searchTerm" placeholder="Titre d'une musique">
         </mat-form-field>
         <button  mat-flat-button color="primary" (click)="onClickSearchMusicByName()">Rechercher</button>
     </div>
